tests/snapshots/envuse_test__envuse_test__should_catch_error_type_unknown.snap
---
source: tests/envuse_test.rs
expression: error.to_string()
---
ParseError: FOO value cannot be null

>    2 |             FOO: unknown
                     ▀▀▀▀▀▀▀▀▀▀▀▀
    at <unknown>:2:13

