tests/snapshots/envuse_test__envuse_test__should_catch_program_error-2.snap
---
source: tests/envuse_test.rs
expression: program.get_message()
---
SyntaxError: Unexpected type

>    1 | FOO "biz"
              ▀▀▀
    at <unknown>:1:6

