tests/snapshots/envuse_test__envuse_test__should_catch_program_error_to_js-2.snap
---
source: tests/envuse_test.rs
expression: error.to_string()
---
SyntaxError: Unexpected type

>    3 | 	FOO 123
              ▀▀
    at <unknown>:3:6

