tests/snapshots/envuse_test__envuse_test__should_catch_program_error_to_js.snap
---
source: tests/envuse_test.rs
expression: error.get_message()
---
SyntaxError: Unexpected type

>    3 | 	FOO 123
              ▀▀
    at /app/.envuse:3:6

