tests/snapshots/envuse_test__envuse_test__should_create_program.snap
---
source: tests/envuse_test.rs
expression: program
---
Program {
    location: None,
    source: "FOO=\"biz\"",
    ast: Document {
        span: Span {
            start: 0,
            end: 8,
        },
        executable: None,
        elements: [
            Variable {
                span: Span {
                    start: 0,
                    end: 8,
                },
                comment: None,
                name: "FOO",
                variable_type: None,
                options_variable_type: None,
                default_value: Some(
                    DefaultValue {
                        span: Span {
                            start: 5,
                            end: 8,
                        },
                        value: "biz",
                    },
                ),
                nullable: false,
            },
        ],
    },
}
