tests/snapshots/envuse_test__envuse_test__should_full_sample.snap
---
source: tests/envuse_test.rs
expression: "program.parse(envs, None).unwrap()"
---
BAR:
  Number: 1223
BIZ:
  Boolean: true
BLI: "Null"
FOO:
  String: val

