tests/snapshots/envuse_test__envuse_test__should_parse_an_boolean_value.snap
---
source: tests/envuse_test.rs
expression: "program.parse([(\"FOO\", \"true\")], None)"
---
Ok(
    {
        "FOO": Boolean(
            true,
        ),
    },
)
