tests/snapshots/envuse_test__envuse_test__should_parse_an_null_value.snap
---
source: tests/envuse_test.rs
expression: "program.parse([(\"BAR\", \"true\")], None)"
---
Ok(
    {
        "FOO": Null,
    },
)
