tests/snapshots/envuse_test__envuse_test__should_parse_an_number_value.snap
---
source: tests/envuse_test.rs
expression: "program.parse([(\"FOO\", \"30_000\")])"
---
{
    "FOO": Number(
        30000,
    ),
}
