tests/snapshots/envuse_test__envuse_test__should_parse_an_string_value.snap
---
source: tests/envuse_test.rs
expression: "program.parse([(\"FOO\", \"BAR\")])"
---
{
    "FOO": String(
        "BAR",
    ),
}
